--- a/src/view/layout/nav.html
+++ b/src/view/layout/nav.html
@@ -3,7 +3,7 @@
         <div class="user-info">
             <span class="user not-login">
                 <span class="link js-login">登录</span>
-                <span class="link js-reigister">注册</span>
+                <span class="link js-register">注册</span>
             </span>
             <span class="user login">
                 <span class="link-text">
